--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/ChatGPT Image Apr 11, 2025, 10_42_02 PM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/index.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>ArogyaMind</title>
   </head>
   <body>
     <div id="root"></div>
